# python-project-lvl4

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
task_manager/: forms.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_auto_20211220_1053.py  0003_alter_label_options.py  0004_alter_label_name.py
task_manager/labels/templates/labels/: list.html
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/static/styles/: main.css
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0002_alter_status_options.py
task_manager/statuses/templates/statuses/: list.html
task_manager/tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_auto_20211125_1539.py  0002_auto_20211220_1053.py  0003_auto_20211216_0918.py  0003_auto_20211220_1104.py  0004_remove_task_tags.py
task_manager/tasks/templates/tasks/: detail.html  list.html  task_filter.html
task_manager/templates/: confirm_delete.html  create_form.html  footer.html  index.html  login_form.html  main.html  messages.html  navbar.html  update_form.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
task_manager/users/templates/users/: list.html  user_confirm_delete.html  user_form.html  user_update_form.html
